# quests-tracker

./: .gitignore  Cargo.toml  diesel-note.md  diesel.toml
src/: lib.rs  main.rs
src/application/usecases/: adventurers.rs  authentication.rs  crew_switchboard.rs  guild_commanders.rs  journey_ledger.rs  mod.rs  quest_ops.rs  quest_viewing.rs
src/config/: config_loader.rs  mod.rs  stage.rs
src/domain/entities/: quests.rs
src/domain/repositories/: adventurers.rs  crew_switch_board.rs  guild_commanders.rs  journey_ledger.rs  mod.rs  quest_ops.rs  quest_viewing.rs
src/domain/value_objects/: adventurer_model.rs  board_checking_filter.rs  guild_commander_model.rs  quest_adventurer_junction.rs  quest_model.rs  quest_statuses.rs
src/infrastructure/axum_http/: http_serve.rs  mod.rs
src/infrastructure/postgres/: mod.rs  postgres_connection.rs
src/infrastructure/postgres/repositories/: crew_switchboard.rs  guild_commanders.rs  journey_ledger.rs  mod.rs  quest_ops.rs  quest_viewing.rs
