[package]
name = "quests-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
diesel = { version = "2.2.6", features = ["postgres", "serde_json", "chrono", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "9.3.0", default-features = false }
mockall = "0.13.1"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
